<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_expedientes" android:icon="@drawable/ic_nav_folder" android:title="@string/menu_expedientes" />
        <item android:id="@+id/nav_documentos" android:icon="@drawable/ic_nav_document" android:title="@string/menu_documentos" />
        <item android:id="@+id/nav_bandeja" android:icon="@drawable/ic_nav_inbox" android:title="@string/menu_bandeja" />
        <item android:id="@+id/nav_derivaciones" android:icon="@drawable/ic_nav_route" android:title="@string/menu_derivaciones" />
        <item android:id="@+id/nav_archivo" android:icon="@drawable/ic_nav_archive" android:title="@string/menu_archivo" />
        <item android:id="@+id/nav_sincronizacion" android:icon="@drawable/ic_nav_sync" android:title="@string/menu_sincronizacion" />
    </group>

    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_logout" android:icon="@drawable/ic_nav_logout" android:title="@string/menu_cerrar_sesion" />
    </group>
</menu>
