<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText android:id="@+id/txtNumero" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/nro_documento" />
        <EditText android:id="@+id/txtExpediente" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/id_expediente" android:inputType="number" />
        <EditText android:id="@+id/txtTipo" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/id_tipo_documento" android:inputType="number" />
        <EditText android:id="@+id/txtAdministrado" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/id_administrado" android:inputType="number" />
        <EditText android:id="@+id/txtFolios" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/folios" android:inputType="number" />

        <Button
            android:id="@+id/btnFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fotografiar_documento" />

        <TextView
            android:id="@+id/txtFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />
    </LinearLayout>
</ScrollView>
